--- a/package.json
+++ b/package.json
@@ -8,9 +8,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.5",
     "@notionhq/client": "^0.4.4",
-    "next": "12.0.1",
+    "next": "12.0.10",
+    "prop-types": "^15.8.1",
     "react": "17.x",
-    "react-dom": "17.x"
+    "react-dom": "17.x",
+    "react-katex": "^2.0.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.6",
+    "tailwindcss": "^3.0.18"
   }
 }
