--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "@heroicons/react": "^1.0.5",
     "@notionhq/client": "^0.4.4",
     "next": "12.0.10",
+    "prismjs": "^1.27.0",
     "prop-types": "^15.8.1",
     "react": "17.x",
     "react-dom": "17.x",
-    "react-katex": "^2.0.2"
+    "react-katex": "^2.0.2",
+    "react-simple-code-editor": "^0.11.0"
   },
   "devDependencies": {
+    "@types/prismjs": "^1.26.0",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.18"
