--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.5",
     "@notionhq/client": "^0.4.4",
+    "@tailwindcss/forms": "^0.5.0",
     "next": "12.0.10",
+    "npm": "^8.5.5",
     "prismjs": "^1.27.0",
     "prop-types": "^15.8.1",
     "react": "17.x",
     "react-dom": "17.x",
+    "react-hotkeys-hook": "^3.4.4",
     "react-katex": "^2.0.2",
     "react-simple-code-editor": "^0.11.0"
   },
