--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prop-types": "^15.8.1",
     "react": "17.x",
     "react-dom": "17.x",
+    "react-gist": "^1.2.4",
     "react-hotkeys-hook": "^3.4.4",
     "react-katex": "^2.0.2",
     "react-simple-code-editor": "^0.11.0"
