--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.5",
     "@notionhq/client": "^0.4.4",
+    "@primer/octicons-react": "^17.0.0",
     "@tailwindcss/forms": "^0.5.0",
     "next": "12.0.10",
     "npm": "^8.5.5",
