--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@amplitude/analytics-browser": "^0.3.1",
+    "@amplitude/node": "^1.10.0",
     "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.5",
     "@notionhq/client": "^0.4.4",
     "@primer/octicons-react": "^17.0.0",
     "@tailwindcss/forms": "^0.5.0",
+    "js-cookie": "^3.0.1",
     "next": "12.0.10",
     "npm": "^8.5.5",
     "prismjs": "^1.27.0",
