--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@primer/octicons-react": "^17.0.0",
     "@tailwindcss/forms": "^0.5.0",
     "js-cookie": "^3.0.1",
-    "next": "12.0.10",
+    "next": "^12.0.10",
     "npm": "^8.5.5",
     "prismjs": "^1.27.0",
     "prop-types": "^15.8.1",
