--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "@types/react": "^18.0.21",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.6",
-    "tailwindcss": "^3.0.18",
+    "prettier": "^2.8.4",
+    "prettier-plugin-tailwindcss": "^0.2.4",
+    "tailwindcss": "^3.2.7",
     "typescript": "^4.8.4"
   }
 }
